[gd_scene load_steps=17 format=3 uid="uid://cqhalswss0ob8"]

[ext_resource type="Script" path="res://Personajes/EnemigoTortuga/tortuga.gd" id="1_fnnty"]
[ext_resource type="Texture2D" uid="uid://n311nc4qf1ye" path="res://Assets_PixelAdventure/Enemies/Turtle/Idle 2 (44x26).png" id="1_p04o2"]
[ext_resource type="Texture2D" uid="uid://227ob30u73gh" path="res://Assets_PixelAdventure/Enemies/Turtle/Idle 1 (44x26).png" id="2_vy050"]
[ext_resource type="Texture2D" uid="uid://bsrvq2pikjfm" path="res://Assets_PixelAdventure/Enemies/Turtle/Spikes out (44x26).png" id="3_pdoiw"]
[ext_resource type="Texture2D" uid="uid://dgx8et2fqhieq" path="res://Assets_PixelAdventure/Enemies/Turtle/Spikes in (44x26).png" id="4_hgop4"]
[ext_resource type="Texture2D" uid="uid://cqqrqk76s7fnh" path="res://Assets_PixelAdventure/Enemies/Turtle/Hit (44x26).png" id="5_g7ivb"]
[ext_resource type="PackedScene" uid="uid://sqxbpo7m6rht" path="res://Trampas/dmg_player.tscn" id="7_gberw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_skyxi"]
size = Vector2(28, 18)

[sub_resource type="Animation" id="Animation_uftvu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2DIdle1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2DIdel2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2DSpikesOut:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2DSpikesIn:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2DHurt:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_4ijbd"]
resource_name = "hurt"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2DHurt:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_0hlwx"]
resource_name = "idle1"
length = 1.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2DIdle1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 12, 12, 13]
}

[sub_resource type="Animation" id="Animation_eyky7"]
resource_name = "idle2"
length = 1.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2DIdel2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13]
}

[sub_resource type="Animation" id="Animation_inbi5"]
resource_name = "spikesIn"
length = 0.35
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2DSpikesIn:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 6, 7]
}

[sub_resource type="Animation" id="Animation_lsm0q"]
resource_name = "spikesOut"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2DSpikesOut:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w6wx5"]
_data = {
"RESET": SubResource("Animation_uftvu"),
"hurt": SubResource("Animation_4ijbd"),
"idle1": SubResource("Animation_0hlwx"),
"idle2": SubResource("Animation_eyky7"),
"spikesIn": SubResource("Animation_inbi5"),
"spikesOut": SubResource("Animation_lsm0q")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yuq26"]
size = Vector2(41, 24)

[node name="CharacterBody2D" type="CharacterBody2D" groups=["Enemigos"]]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_fnnty")
metadata/_edit_horizontal_guides_ = []

[node name="Sprite2DIdle1" type="Sprite2D" parent="."]
texture = ExtResource("1_p04o2")
hframes = 14
frame = 2

[node name="Sprite2DIdel2" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_vy050")
hframes = 14
frame = 1

[node name="Sprite2DSpikesOut" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_pdoiw")
hframes = 8
frame = 1

[node name="Sprite2DSpikesIn" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("4_hgop4")
hframes = 8
frame = 1

[node name="Sprite2DHurt" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("5_g7ivb")
hframes = 5
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_skyxi")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_w6wx5")
}

[node name="Raycast" type="Node2D" parent="."]

[node name="RayCast2DSideLeft" type="RayCast2D" parent="Raycast"]
target_position = Vector2(-70, 0)

[node name="RayCast2DSideRight" type="RayCast2D" parent="Raycast"]
target_position = Vector2(70, 0)

[node name="RayCast2DUpLeft" type="RayCast2D" parent="Raycast"]
target_position = Vector2(-50, -50)

[node name="RayCast2DUpRight" type="RayCast2D" parent="Raycast"]
target_position = Vector2(50, -50)

[node name="RayCast2DUpCenter" type="RayCast2D" parent="Raycast"]
target_position = Vector2(0, -60)

[node name="ActivarSpikes" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="DesactivarSpikes" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="dmgPlayer" parent="." instance=ExtResource("7_gberw")]

[node name="CollisionShape2D" parent="dmgPlayer" index="0"]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_yuq26")

[connection signal="timeout" from="ActivarSpikes" to="." method="_on_activar_spikes_timeout"]
[connection signal="timeout" from="DesactivarSpikes" to="." method="_on_desactivar_spikes_timeout"]

[editable path="dmgPlayer"]
